--- a/Compiler_Construction_Running_File.ipynb
+++ b/Compiler_Construction_Running_File.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "6mIRwGECmGQJ",
+        "ddq6x0l4mKj_",
+        "tpnZU-VbmyVw",
+        "eH4r4sxPnjwc"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +61,11 @@
         "Flex is used to generate a scanner specified by regular expressions and C code for actions to implement it. The scanner reads an input sequence that\n",
         "matches a pattern, it executes the action to process it allowing the tool to be used in many different contexts due to generalization.\n",
         "It is faster than Lex and often utilized with Bison.\n",
-        "![Flex diagram.png]()\n"
+        "![Flex diagram.png](http://alumni.cs.ucr.edu/~lgao/teaching/Img/flex.jpg)\n",
+        "\n",
+        "Initiated by creating a .l file thats passed through the flex to form a lex.yy.c file compiled to create output that is used to create sequences of tokens from an input stream.\n",
+        "\n",
+        "![Flex diagram.png](https://slidetodoc.com/presentation_image_h/f602d8f20f82719615319a8a9c18dc8d/image-46.jpg)"
       ],
       "metadata": {
         "id": "FpsoTIQR-aDV"
@@ -91,8 +100,7 @@
         "\n",
         "- Yacc provides a tool to produce a parser for a given grammer. It was originally designed for being complemented by Lex. \n",
         "\n",
-        "\n",
-        "<img src='https://drive.google.com/uc?id=1i6HWp6k6T04EC42SfaFiiHIem2y6BqES'>\n",
+        "<img src='https://drive.google.com/uc?id=1ss8zid5GHjjF5IG7vIgnP8WpO6yz4krX'>\n",
         "\n",
         "Yacc translates a given context free grammar specifications(input in input_file.y) into a C implementation(y.tab.c) of a corresponding push down automation(a finite state machine with a stack). When the C file is compiled, it yields an executable parser.\n",
         "\n"
@@ -102,22 +110,24 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "YACC INPUT FILE\n",
-        "YACC Input file generally finishes with file.*y*"
-      ],
-      "metadata": {
-        "id": "DyuZBIBgjCN6"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "B8q9okIFl8MA"
+        "id": "B8q9okIFl8MA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e857c2f-f9c7-4b1c-d627-f92a0e5a8eaf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UsageError: Line magic function `%token` not found.\n"
+          ]
+        }
+      ],
       "source": [
         "#DISCLAIMER: DO NOT RUN THIS CELL\n",
         "#YACC Input File Containes 3 parts: Definitions, Rules and Auxillary Routines\n",
@@ -209,22 +219,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "8VmJBkD7jcNM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xNzIzBQmjez2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "## References\n",
         "Lesk, M. E., & Schmidt, E. (n.d.). Lex - A Lexical Analyzer Generator. The Lex & Yacc Page. Retrieved September 10, 2022, from http://dinosaur.compilertools.net/lex/index.html\n",
@@ -233,12 +227,9 @@
         "\n",
         "Wikipedia contributors. (2022, July 2). Lex (software). Wikipedia. Retrieved September 10, 2022, from https://en.wikipedia.org/w/index.php?title=Lex_(software)&oldid=1096096344\n",
         "\n",
-        "\n",
-        "Geeks for Geeks. (2021, April 29). Introduction to YACC. GeeksforGeeks. https://www.geeksforgeeks.org/introduction-to-yacc/\n",
-        "\n",
-        "Johnson, S. C. (n.d.). Yacc Yet Another Compiler Compiler by Stephen C. Johnson. UT Computer Science. https://www.cs.utexas.edu/users/novak/yaccpaper.htm\n",
-        "\n",
-        "Nachiappan, V., & National Institute of Technology. (n.d.). YACC. EXPL NITC. Retrieved September 13, 2022, from https://silcnitc.github.io/yacc.html"
+        "The Flex Project. “Lexical Analysis with Flex.” Accessed Online, 19 Jun 2011. URL:\n",
+        "http://flex.sourceforge.net/manual/\n",
+        "\n"
       ],
       "metadata": {
         "id": "tpnZU-VbmyVw"
