--- a/Compiler_Construction_Running_File.ipynb
+++ b/Compiler_Construction_Running_File.ipynb
@@ -229,6 +229,12 @@
         "\n",
         "The Flex Project. “Lexical Analysis with Flex.” Accessed Online, 19 Jun 2011. URL:\n",
         "http://flex.sourceforge.net/manual/\n",
+        "\n",
+        "Geeks for Geeks. (2021, April 29). Introduction to YACC. GeeksforGeeks. https://www.geeksforgeeks.org/introduction-to-yacc/\n",
+        "\n",
+        "Johnson, S. C. (n.d.). Yacc Yet Another Compiler Compiler by Stephen C. Johnson. UT Computer Science. https://www.cs.utexas.edu/users/novak/yaccpaper.htm\n",
+        "\n",
+        "Nachiappan, V., & National Institute of Technology. (n.d.). YACC. EXPL NITC. Retrieved September 13, 2022, from https://silcnitc.github.io/yacc.html\n",
         "\n"
       ],
       "metadata": {
