--- a/Compiler_Construction_Running_File.ipynb
+++ b/Compiler_Construction_Running_File.ipynb
@@ -363,10 +363,24 @@
         "}"
       ],
       "metadata": {
-        "id": "s0ohB9AhEN6s"
+        "id": "s0ohB9AhEN6s",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "14aa8c8a-4f6b-4c9c-94be-6d94499d75e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-2d69a9aae4ea>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ***(Definition, Section, has, one, variable)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
